# os

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
Base/home/user/: file.txt
Kernel/: .gitignore  Assert.h  CMakeLists.txt  DebugConsole.cpp  DebugConsole.h  IO.h  Kernel.cpp  Logger.h  Makefile  POSIX.h  POSIX.h.autosave  Runtime.cpp  Stdlib.cpp  Stdlib.h  User.h  compile_flags.txt  kmalloc.cpp  kmalloc.h  kprintf.cpp  kprintf.h  linker.ld  multiboot.h  panic.h
Kernel/API/: errno.h  fcntl.h  syscalls.h  termios.h  unistd.h
Kernel/Boot/: boot.S
Kernel/Bus/: PCI.cpp  PCI.h
Kernel/CPU/: CPU.cpp  CPU.h  GDT.cpp  GDT.h  IDT.cpp  IDT.h  IRQHandler.cpp  IRQHandler.h  PIC.cpp  PIC.h  TSS.h  lgdt.S  lidt.S
Kernel/Devices/: ATA.h  BlockDevice.h  CMOS.cpp  CMOS.h  CharacterDevice.h  Console.cpp  Console.h  Device.cpp  Device.h  Keyboard.cpp  Keyboard.h  KeyboardDevice.cpp  KeyboardDevice.h  PATA.h  PATADisk.cpp  PATADisk.h  PIT.cpp  PIT.h  PartitionDevice.cpp  PartitionDevice.h  RandomDevice.cpp  RandomDevice.h  TTYDevice.cpp  TTYDevice.h  VGA.cpp  VGA.h  VirtualConsole.cpp  VirtualConsole.h
Kernel/Filesystem/: DirectoryEntry.h  Ext2.h  Ext2Filesystem.cpp  Ext2Filesystem.h  Ext2Inode.cpp  Ext2Inode.h  File.h  FileDescriptor.cpp  FileDescriptor.h  Filesystem.h  Inode.cpp  Inode.h  InodeFile.cpp  InodeFile.h  InodeId.h  PTSFilesystem.cpp  PTSFilesystem.h  PTSInode.cpp  PTSInode.h  VFS.cpp  VFS.h
Kernel/Graphics/: EmulatorVGAGraphicsCard.cpp  EmulatorVGAGraphicsCard.h  GraphicsCard.h  GraphicsManager.cpp  GraphicsManager.h  LegacyEmulatorGraphicsCard.cpp  LegacyEmulatorGraphicsCard.h  VGAGraphicsCard.h  VGATextModeGraphicsCard.cpp  VGATextModeGraphicsCard.h
Kernel/Memory/: Address.h  AddressAllocator.cpp  AddressAllocator.h  AddressAllocator.h.autosave  Heap.h  MemoryManager.cpp  MemoryManager.h  PMM.cpp  PMM.h  Paging.h  PagingTypes.h  PhysicalRegion.cpp  PhysicalRegion.h  Types.h  VMObject.cpp  VMObject.h  VirtualRegion.cpp  VirtualRegion.h  Zone.cpp  Zone.h  heap.c  zone.h
Kernel/Network/: ARP.h  E1000NetworkCard.cpp  E1000NetworkCard.h  Ethernet.h  ICMP.h  IPv4.h  MACAddress.h  NetworkDaemon.cpp  NetworkDaemon.h  NetworkEndianness.h
Kernel/Process/: Blocker.cpp  Blocker.h  ELF.cpp  ELF.h  Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  Spinlock.h  Syscall.cpp  Syscall.h  WaitingStatus.cpp  WaitingStatus.h  context.S  switch.S
Kernel/Storage/: ATA.cpp  ATA.h
Kernel/TTY/: VirtualConsole.cpp  VirtualConsole.h
Kernel/memory/: paging.h  pmm.h  zone.c
LibA/: Array.h  Bitmap.h  Number.h  Printf.h  Result.h  Stdlib.h
LibC/: CMakeLists.txt  Makefile  MallocManager.cpp  MallocManager.h  compile_flags.txt  crt0.cpp  dirent.cpp  dirent.h  errno.h  errno_defines.h  fcntl.cpp  fcntl.h  limits.h  stdbool.h  stddef.h  stdint.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  termios.cpp  termios.h  time.h  unistd.cpp  unistd.h
LibC/include/: errno.h  limits.h  stdint.h
LibC/include/sys/: types.h
LibC/src/: crt0.cpp  stdio.cpp  stdlib.cpp  string.cpp
LibC/sys/: ioctl.cpp  ioctl.h  ioctl_defines.h  mman.cpp  mman.h  stat.cpp  stat.h  syscall.cpp  syscall.h  syscall_defines.h  syscalls.h  types.h  wait.cpp  wait.h
Meta/: all.sh  all_debug.sh  all_tests.sh  bochsrc.txt  build_fs.sh  build_grub.sh  build_tap.sh  env.sh  grub.cfg  run.sh  tests.sh
Programs/: CMakeLists.txt  cat.cpp  echo.cpp  id.cpp  ls.cpp  shell.cpp  stat.cpp
Programs/shell/: CMakeLists.txt  Readline.cpp  Readline.h  shell.cpp
Rust/: Cargo.toml  Makefile  build.rs
Rust/linker/: i686.ld
Rust/src/: boot.asm  debug.rs  lib.rs  main.rs
Rust/src/boot/: boot.s
Rust/src/cpu/: io.rs
Tests/: CMakeLists.txt  Macros.h
Tests/Universal/: CMakeLists.txt  Int.h  IntSharedPtr.h  TestArray.cpp  TestArrayList.cpp  TestBasicString.cpp  TestByteBuffer.cpp  TestCircularQueue.cpp  TestNumber.cpp  TestOptional.cpp  TestSharedPtr.cpp  TestString.cpp  TestStringView.cpp
Toolchain/: .gitignore  README.md  build.sh  build_bochs.sh  build_qemu.sh
Universal/: Array.h  ArrayList.h  Assert.h  Atomic.h  BasicString.cpp  BasicString.h  Bitmap.h  ByteBuffer.h  CircularQueue.h  Expected.h  Function.h  Heap.h  LinkedList.h  Logger.h  Malloc.h  Number.h  Optional.h  PrintFormat.cpp  PrintFormat.h  Printf.h  PtrArrayList.h  README.md  RefCounted.h  Result.h  ShareCounted.h  SharedPtr.h  Stdlib.cpp  Stdlib.h  String.cpp  String.h  StringView.cpp  StringView.h  Time.cpp  Time.h  Types.h  UniquePtr.h  compile_flags.txt
kernel/: .depend  Makefile  compile_flags.txt  kernel.bin.map  kernel.c  kernel.d  kprintf.c  kprintf.h  linker.ld  logger.h  panic.h
kernel/api/: printf.c  printf.d  printf.h  string.c  string.d  string.h  vsprintf.c
kernel/api/string/: memset.c  strlen.c
kernel/api/sys/: io.h
kernel/boot/: boot.S  boot.s  crti.S  crtn.S
kernel/cpu/: gdt.c  gdt.d  gdt.h  idt.c  idt.d  idt.h  lgdt.S  lgdt.s  lidt.s  panic.c  panic.d  panic.h  pic.c  pic.d  pic.h
kernel/devices/: console.c  console.d  console.h  keyboard.c  keyboard.h  pit.c  pit.h  vga.c  vga.d  vga.h
kernel/logger/: logger.c  logger.d  logger.h
kernel/memory/: heap.h  memory.c  memory.h  memory_manager.c  memory_manager.h  paging.c  paging.h  pmm.c  pmm.h  types.h  zone.c  zone.h
kernel/multiboot/: multiboot.h
kernel/sys/: io.h
libc/: Makefile  compile_flags.txt
libc/include/: limits.h  stdarg.h  stdbool.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h  types.h
libc/src/: stdio.c  string.c
meta/: all.sh  bochsrc.txt  build_grub.sh  env.sh  grub.cfg  refresh-qt-creator.sh  run.sh  run_bochs.sh  run_qemu.sh  update_image.sh
toolchain/: .gitignore  binutils-2.32.patch  build-bochs.sh  build-qemu.sh  build.sh  build_bochs.sh  build_qemu.sh  gcc-10.2.0.patch
