add_executable(TestArray TestArray.cpp)
add_executable(TestArrayList TestArrayList.cpp)
add_executable(TestByteBuffer TestByteBuffer.cpp)
add_executable(TestCircularQueue TestCircularQueue.cpp)
add_executable(TestNumber TestNumber.cpp)
add_executable(TestOptional TestOptional.cpp)
add_executable(TestSharedPtr TestSharedPtr.cpp)
add_executable(TestString
    TestString.cpp
    ../../Universal/String.cpp
    ../../Universal/PrintFormat.cpp
)
