function(MAKE_TEST PROGRAM_NAME)
    add_executable(${PROGRAM_NAME} ${UNIVERSAL_SOURCES} ../../Universal/String.cpp ${PROGRAM_NAME}.cpp)
    install(TARGETS ${PROGRAM_NAME} RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/Tests/bin)
endfunction()

MAKE_TEST(TestArray)
MAKE_TEST(TestArrayList)
MAKE_TEST(TestByteBuffer)
MAKE_TEST(TestCircularQueue)
MAKE_TEST(TestNumber)
MAKE_TEST(TestOptional)
MAKE_TEST(TestSharedPtr)
MAKE_TEST(TestString)
MAKE_TEST(TestStringView)
MAKE_TEST(TestBasicString)
